fix: profile page header css and toggle z-index

--- a/app/components/feed/feed.module.css
+++ b/app/components/feed/feed.module.css
@@ -24,6 +24,7 @@
   padding: 1rem;
   height: 3rem;
   width: 3rem;
+  z-index: 100;
 }
 
 /* Mobile */
