--- a/app/components/user-profile-header/UserProfileHeader.module.css
+++ b/app/components/user-profile-header/UserProfileHeader.module.css
@@ -3,6 +3,7 @@
   gap: 2rem;
   justify-content: center;
   align-items: flex-start;
+  max-width: var(--profile-page-max-width);
 }
 
 .profile {
